--- a/experiments/baselines/supervised_training/supervised_random_init.yaml
+++ b/experiments/baselines/supervised_training/supervised_random_init.yaml
@@ -42,39 +42,44 @@ system:
           feed_forward: False
         heads: [4096, 2048, 8] # Note: Change to [4096, 2048, 1] for Task 2 and [4096, 2048, 512, 256, 1] for Task 3
 
-    post_criterion_activation: "$torch.nn.functional.softmax" # Note: Change to $torch.sigmoid for Task 2 and Task 3
-    # cast_target_dtype_to: "$torch.float32" # Note: Uncomment for Task 2 and Task 3
+
+    postprocessing:
+      metrics:
+        pred:
+          - "$lambda x: torch.softmax(x, 1)" # Note: Change to $lambda x: torch.sigmoid(x) for Task 2 and Task 3    
+      # criterion:
+      #   target: # Note: Uncomment for Task 2 and Task 3
+      #     - "$lambda x: x.float()" 
+
     criterion:
         _target_: torch.nn.CrossEntropyLoss # Note: Change to torch.nn.BCEWithLogitsLoss for Task 2 and Task 3
-
-    optimizers:
-        _target_: torch.optim.SGD
+    
+    optimizer:
+        _target_: torch.optim.Adam
         params: "$@system#model.parameters()"
-        lr: "$((@system#batch_size * @trainer#devices)/256) * 0.1" # Compute LR dynamically for different batch sizes
-        weight_decay: 0.0
-        momentum: 0.9
+        # lr: "$((@system#batch_size * @trainer#devices)/256) * 0.1" # Compute LR dynamically for different batch sizes
+        # weight_decay: 0.0
+        # momentum: 0.9
 
-    schedulers:
-      scheduler:
-        _target_: torch.optim.lr_scheduler.StepLR
-        optimizer: "@system#optimizers"
-        step_size: 30
-      strict: True
+    scheduler:
+      _target_: torch.optim.lr_scheduler.StepLR
+      optimizer: "@system#optimizer"
+      step_size: 30
 
-    train_metrics: 
+    metrics:
+      train: 
         - _target_: torchmetrics.AveragePrecision
-          task: multiclass
-          num_classes: 8 # Note: Change to `binary` for Task 2 and Task 3 and remove num_classes below
-
-        - _target_: torchmetrics.AUROC
           task: multiclass # Note: Change to `binary` for Task 2 and Task 3 and remove num_classes below
           num_classes: 8 
+        - _target_: torchmetrics.AUROC
+          task: multiclass # Note: Change to `binary` for Task 2 and Task 3 and remove num_classes below
+          num_classes: 8
 
+      val: "%#train"
+      test: "%#train"
 
-    val_metrics: "%system#train_metrics"
-    test_metrics: "%system#train_metrics"
-
-    train_dataset:
+    datasets:
+      train:
         _target_: fmcib.datasets.SSLRadiomicsDataset
         path: "./data/preprocessing/deeplesion/annotations/task1_train.csv" # Note: Change path
         label: "Coarse_lesion_type" # Note: Change to appropriate label column, e.g. "malignancy" for Task 2 and "survival" for Task 3
@@ -102,59 +107,25 @@ system:
                   subtrahend: -1024
                   divisor: 3072
 
-    val_dataset:
+      val:
         _target_: fmcib.datasets.SSLRadiomicsDataset
-        path: "./data/preprocessing/deeplesion/annotations/task1_val.csv"  # Note: Change path
-        label: "@system#train_dataset#label"
-        radius: "@system#train_dataset#radius"
-        orient: "@system#train_dataset#orient"
-        resample_spacing: "@system#train_dataset#resample_spacing"
-        enable_negatives: "@system#train_dataset#enable_negatives"
+        path: null # Note: Change path
+        label: "@system#datasets#train#label"
+        radius: "@system#datasets#train#radius"
+        orient: "@system#datasets#train#orient"
+        resample_spacing: "@system#datasets#train#resample_spacing"
+        enable_negatives: "@system#datasets#train#enable_negatives"
         transform:
             _target_: monai.transforms.Compose
             transforms:
-                - _target_: monai.transforms.ToTensor
-                - _target_: monai.transforms.AddChannel
-                - _target_: monai.transforms.SpatialPad
-                  spatial_size: [50, 50, 50]
                 - _target_: monai.transforms.NormalizeIntensity
                   subtrahend: -1024
-                  divisor: 3072
+                  divisor: 3072            
+                - _target_: monai.transforms.ToTensor
+                - _target_: monai.transforms.EnsureChannelFirst
+                  channel_dim: no_channel
+                - _target_: monai.transforms.SpatialPad
+                  spatial_size: [50, 50, 50]
+
                   
-    test_dataset:
-        _target_: fmcib.datasets.SSLRadiomicsDataset
-        path: "./data/preprocessing/deeplesion/annotations/task1_test.csv"  # Note: Change path
-        label: "@system#train_dataset#label"
-        radius: "@system#train_dataset#radius"
-        orient: "@system#train_dataset#orient"
-        resample_spacing: "@system#train_dataset#resample_spacing"
-        enable_negatives: "@system#train_dataset#enable_negatives"
-        transform:
-            _target_: monai.transforms.Compose
-            transforms:
-                - _target_: monai.transforms.ToTensor
-                - _target_: monai.transforms.AddChannel
-                - _target_: monai.transforms.SpatialPad
-                  spatial_size: [50, 50, 50]
-                - _target_: monai.transforms.NormalizeIntensity
-                  subtrahend: -1024
-                  divisor: 3072        
-    
-    predict_dataset:
-        _target_: fmcib.datasets.SSLRadiomicsDataset
-        path: "./data/preprocessing/deeplesion/annotations/task1_test.csv"  # Note: Change path
-        label: "@system#train_dataset#label"
-        radius: "@system#train_dataset#radius"
-        orient: "@system#train_dataset#orient"
-        resample_spacing: "@system#train_dataset#resample_spacing"
-        enable_negatives: "@system#train_dataset#enable_negatives"
-        transform:
-            _target_: monai.transforms.Compose
-            transforms:
-                - _target_: monai.transforms.ToTensor
-                - _target_: monai.transforms.AddChannel
-                - _target_: monai.transforms.SpatialPad
-                  spatial_size: [50, 50, 50]
-                - _target_: monai.transforms.NormalizeIntensity
-                  subtrahend: -1024
-                  divisor: 3072
+      test: null
