--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -40,7 +40,7 @@ jobs:
         git config --local user.name "GitHub Action"
         git add .
         git commit -m "Release versioning update" || echo "No changes to commit"
-        git push
+        git push origin HEAD:master
 
     - name: Build and publish to pypi
       uses: JRubics/poetry-publish@v1.16
