--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,12 +50,20 @@ fonttools = "^4.44.0"
 pydantic = "1.10.13"
 lightly = "1.4.19"
 werkzeug = "^3.0.1"
-urllib3 = "^2.1.0"
+urllib3 = ">=2.2.2"
 aiohttp = "^3.9.1"
 pip = "^24.0"
-tornado = "^6.4"
+tornado = ">=6.4.1"
 wandb = "^0.16.3"
 mpmath = "1.3.0"
+zipp = ">=3.19.1"
+virtualenv = ">=20.26.6"
+setuptools = ">=70.0.0"
+sentry-sdk = ">=2.8.0"
+scikit-learn = ">=1.5.0"
+requests = ">=2.32.2"
+mkdocs-material = ">=9.5.32"
+certifi = ">=2024.07.04"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.4.2"
